Ctrl+Wheel to cycle values failed in Toolshelf #45944

Closed
opened 2015-08-29 06:45:48 +02:00 by Leon Cheung · 8 comments
Member

System Information
Win8.1 64bit | GTX680

Blender Version
Broken: 2.75.4 c749fe4
Worked: n/a

Short description of error
According to this commit, we use Ctrl+Wheel to cycle values/dropdown options, but it appears to conflict with the Tab switching shortcut?

Exact steps for others to reproduce the error
Open Toolshelf, then try Ctrl + Wheel on any value.

**System Information** Win8.1 64bit | GTX680 **Blender Version** Broken: 2.75.4 c749fe4 Worked: n/a **Short description of error** According to [this ](https://developer.blender.org/rB9bfea67751dc5) commit, we use Ctrl+Wheel to cycle values/dropdown options, but it appears to conflict with the Tab switching shortcut? **Exact steps for others to reproduce the error** Open Toolshelf, then try Ctrl + Wheel on any value.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu

Added subscribers: @JulianEisel, @ideasman42, @Sergey

Added subscribers: @JulianEisel, @ideasman42, @Sergey

Indeed.

@ideasman42, @JulianEisel and rest of UI team: maybe we can just ignore tab scroll when ctrl-wheel is invoked from over the enum?

Indeed. @ideasman42, @JulianEisel and rest of UI team: maybe we can just ignore tab scroll when ctrl-wheel is invoked from over the enum?

Added subscriber: @KINjO

Added subscriber: @KINjO
Julian Eisel self-assigned this 2015-08-30 16:18:40 +02:00
Member

Considering this as Todo for now, it's more of a corner-case (aka broken by design). Will have a look nevertheless.

Considering this as Todo for now, it's more of a corner-case (aka broken by design). Will have a look nevertheless.

This issue was referenced by b529b82830

This issue was referenced by b529b828306b2179baa95d5b4988f6eeaf46ded8
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45944
No description provided.